# gec

./: .gitignore  CMakeLists.txt  Doxyfile  area.h  boundary_value.h  conductivity.h  constants.h  current.h  geomagnetic.cpp  geomagnetic.h  hg.h  main.cpp  std_atm.h
conductivity/: COND-TEST-0.5.txt  COND-TEST-0.txt
ip/: 90_1_1.txt  90_90_0.txt  90_90_025.txt  90_90_05.txt  90_90_075.txt  90_90_1.txt  FULL-IP-2016.npy  IP-2016-FULL-ANE.txt  IP-2016-FULL-B.npy  IP-2016-FULL-BNE.npy  IP-2016-FULL-NEW.txt
irbem/: CMakeLists.txt
notes/: 1.fdb_latexmk  1.fls  1.tex  nonst_gec.aux  nonst_gec.fdb_latexmk  nonst_gec.fls  nonst_gec.out  nonst_gec.tex
scripts/: B.py  cond-test.py  cond_test.py  data_a.py  data_b.py  ip_b.py  xi-ip-test.py  xi_ip_test.py
